# classroom_api_client

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: COMMON_USES.md  architeture.md  new_grading_commands.md
src/: cli.py  client.py  client_hybrid.py  client_oauth.py  client_old.py  drive_service.py  main.py  models.py  services.py
src/repositories/: course_repository.py  coursework_repository.py  student_repository.py  submission_repository.py
