[project]
name = "class-api"
version = "0.1.0"
description = "Google Classroom API client for managing courses and assignments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
# Main CLI entrypoint (Typer app defined in src/main.py, wrapped in cli.py)
gclass = "cli:main"
